--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "It service sector, A.R.M.Y, G.L.C",
   "license": "no licence for now",
   "description": "A.R.M.Y official website created with Material Kit 2 by A.R.M.Y",
-  "homepage": "/pages/LandingPages/Aboutus",
+  "homepage": ".",
   "bugs": {
     "url": "https://github.com/issachar-j/ARMY.git"
   },
